CHANGELOG
>>BUILD NEXT

* Fixed bug with always english rank achievements in the chat
* Fixed bug with rare intersection of random and fixed villages (bigger check radius)

>>BUILD 23.05.11
+ Now conquested enemy waypoints are red on the map

* Meereen wp, city and pyramid were moved to be easily found from point.

* Improved ghiscar pyramids (gameplay isn't broken now)
* Improved crossbowers' AI
* Improved wetwood biome
* Improved translations

* Fixed bug with map
* Fixed potential bug caused by duplicated lines in translation files
* Fixed bug with concrete and concrete powder mechanics
* Fixed bug with gui shift when using NEI + drinking potion
* Fixeg bug with prostitute skins
* Fixed bug with sword of command rendering
* Fixed bug with point rendering
* Fixed bug with archer and crossbower drops
* Fixed bug with Jaqen Quest
* Fixed bug with ibben smith's entries
* Fixed bug with berserker weapons
* Fixed bug with wrong farmer units in riverlands
* Fixed bug with capes view in multiplayer

>>BUILD 23.03.25
* Experimental: Multithreading in world decorator
* Optimized Essos and Westeros structures
* Readded compatibility with Weather 2 AGAIN

* Improved Database Generator (now only command is needed)
* Improved Ice wall and Ibbenese wall
* Improved valyrian roads

* Fixed a few bugs in translations
? Fixed something linked to materials

>>BUILD 23.02.14
* Improved Russian, Ukrainian, English translations
* Improved weapon & armor durability because of arguments of players

* Improved structure of lang files. Now it's much easier to finish partial translations of the mod

* Fixed bug with smithing prices and alloy steel smithing
* Fixed bug with HUGE bug, that allowed us to get 60000+ money from lhazar brewer
* Fixed bug with wrong rep required by lhazar smith
* Fixed a few crashes linked to null pointers.

>>BUILD 23.02.10
* Fixed crash in altitude biomes linked to season changes
* Fixed wrong info in database generator
* Fixed bug with untranslated labels
