@@ -1,5 +1,7 @@
 package got.common.world.biome;
 
+import cpw.mods.fml.relauncher.Side;
+import cpw.mods.fml.relauncher.SideOnly;
 import got.common.GOTDate;
 import got.common.GOTDimension;
 
@@ -12,7 +14,7 @@ public enum GOTClimateType {
 		altitudeZone = zone;
 	}
 
-	public static void performSeasonalChanges() {
+	public static void performSeasonalChangesServerSide() {
 		for (GOTBiome biome : GOTDimension.GAME_OF_THRONES.biomeList) {
 			if (biome != null && biome.climateType != null) {
 				switch (GOTDate.AegonCalendar.getSeason()) {
@@ -22,7 +24,86 @@ public enum GOTClimateType {
 							case COLD_AZ:
 							case NORMAL:
 							case NORMAL_AZ:
+							case WINTER:
 								biome.setTemperatureRainfall(0.0F, 2.0F);
+								break;
+							case SUMMER:
+							case SUMMER_AZ:
+								biome.setTemperatureRainfall(0.28F, 2.0F);
+								break;
+						}
+						break;
+					case SPRING:
+						switch (biome.climateType) {
+							case COLD:
+							case COLD_AZ:
+							case NORMAL:
+							case NORMAL_AZ:
+							case SUMMER_AZ:
+								biome.setTemperatureRainfall(0.28F, 0.8F);
+								break;
+							case SUMMER:
+								biome.setTemperatureRainfall(0.8F, 0.8F);
+								break;
+							case WINTER:
+								biome.setTemperatureRainfall(0.0F, 2.0F);
+								break;
+						}
+						break;
+					case SUMMER:
+						switch (biome.climateType) {
+							case COLD:
+							case COLD_AZ:
+							case NORMAL_AZ:
+							case SUMMER_AZ:
+								biome.setTemperatureRainfall(0.28F, 0.8F);
+								break;
+							case NORMAL:
+								biome.setTemperatureRainfall(0.8F, 0.8F);
+								break;
+							case SUMMER:
+								biome.setTemperatureRainfall(1.2F, 0.4F);
+								break;
+							case WINTER:
+								biome.setTemperatureRainfall(0.0F, 2.0F);
+								break;
+						}
+						break;
+					case AUTUMN:
+						switch (biome.climateType) {
+							case COLD:
+							case COLD_AZ:
+							case NORMAL:
+							case NORMAL_AZ:
+								biome.setTemperatureRainfall(0.28F, 2.0F);
+								break;
+							case SUMMER:
+								biome.setTemperatureRainfall(0.8F, 0.8F);
+								break;
+							case SUMMER_AZ:
+								biome.setTemperatureRainfall(0.28F, 0.8F);
+								break;
+							case WINTER:
+								biome.setTemperatureRainfall(0.0F, 2.0F);
+								break;
+						}
+						break;
+				}
+			}
+		}
+	}
+
+	@SideOnly(Side.CLIENT)
+	public static void performSeasonalChangesClientSide() {
+		for (GOTBiome biome : GOTDimension.GAME_OF_THRONES.biomeList) {
+			if (biome != null && biome.climateType != null) {
+				switch (GOTDate.AegonCalendar.getSeason()) {
+					case WINTER:
+						switch (biome.climateType) {
+							case COLD:
+							case COLD_AZ:
+							case NORMAL:
+							case NORMAL_AZ:
 								biome.biomeColors.setGrass(0xffffff);
 								biome.biomeColors.setSky(4212300);
 								biome.biomeColors.setFog(6188664);
@@ -31,7 +112,6 @@ public enum GOTClimateType {
 								break;
 							case SUMMER:
 							case SUMMER_AZ:
-								biome.setTemperatureRainfall(0.28F, 2.0F);
 								biome.biomeColors.resetGrass();
 								biome.biomeColors.setSky(11653858);
 								biome.biomeColors.resetFog();
@@ -39,7 +119,6 @@ public enum GOTClimateType {
 								biome.biomeColors.setFoggy(false);
 								break;
 							case WINTER:
-								biome.setTemperatureRainfall(0.0F, 2.0F);
 								biome.biomeColors.setGrass(0xffffff);
 								biome.biomeColors.setSky(4212300);
 								biome.biomeColors.setFog(6188664);
@@ -54,7 +133,6 @@ public enum GOTClimateType {
 							case COLD_AZ:
 							case NORMAL:
 							case NORMAL_AZ:
-								biome.setTemperatureRainfall(0.28F, 0.8F);
 								biome.biomeColors.resetGrass();
 								biome.biomeColors.setSky(11653858);
 								biome.biomeColors.resetFog();
@@ -62,15 +140,7 @@ public enum GOTClimateType {
 								biome.biomeColors.setFoggy(false);
 								break;
 							case SUMMER:
-								biome.setTemperatureRainfall(0.8F, 0.8F);
-								biome.biomeColors.resetGrass();
-								biome.biomeColors.resetSky();
-								biome.biomeColors.resetFog();
-								biome.biomeColors.resetWater();
-								biome.biomeColors.setFoggy(false);
-								break;
 							case SUMMER_AZ:
-								biome.setTemperatureRainfall(0.28F, 0.8F);
 								biome.biomeColors.resetGrass();
 								biome.biomeColors.resetSky();
 								biome.biomeColors.resetFog();
@@ -78,7 +148,6 @@ public enum GOTClimateType {
 								biome.biomeColors.setFoggy(false);
 								break;
 							case WINTER:
-								biome.setTemperatureRainfall(0.0F, 2.0F);
 								biome.biomeColors.setGrass(0xffffff);
 								biome.biomeColors.setSky(4212300);
 								biome.biomeColors.setFog(6188664);
@@ -91,7 +160,6 @@ public enum GOTClimateType {
 						switch (biome.climateType) {
 							case COLD:
 							case COLD_AZ:
-								biome.setTemperatureRainfall(0.28F, 0.8F);
 								biome.biomeColors.resetGrass();
 								biome.biomeColors.setSky(11653858);
 								biome.biomeColors.resetFog();
@@ -99,15 +167,7 @@ public enum GOTClimateType {
 								biome.biomeColors.setFoggy(false);
 								break;
 							case NORMAL:
-								biome.setTemperatureRainfall(0.8F, 0.8F);
-								biome.biomeColors.resetGrass();
-								biome.biomeColors.resetSky();
-								biome.biomeColors.resetFog();
-								biome.biomeColors.resetWater();
-								biome.biomeColors.setFoggy(false);
-								break;
 							case NORMAL_AZ:
-								biome.setTemperatureRainfall(0.28F, 0.8F);
 								biome.biomeColors.resetGrass();
 								biome.biomeColors.resetSky();
 								biome.biomeColors.resetFog();
@@ -115,15 +175,7 @@ public enum GOTClimateType {
 								biome.biomeColors.setFoggy(false);
 								break;
 							case SUMMER:
-								biome.setTemperatureRainfall(1.2F, 0.4F);
-								biome.biomeColors.setGrass(14538086);
-								biome.biomeColors.setSky(15592678);
-								biome.biomeColors.resetFog();
-								biome.biomeColors.resetWater();
-								biome.biomeColors.setFoggy(false);
-								break;
 							case SUMMER_AZ:
-								biome.setTemperatureRainfall(0.28F, 0.8F);
 								biome.biomeColors.setGrass(14538086);
 								biome.biomeColors.setSky(15592678);
 								biome.biomeColors.resetFog();
@@ -131,7 +183,6 @@ public enum GOTClimateType {
 								biome.biomeColors.setFoggy(false);
 								break;
 							case WINTER:
-								biome.setTemperatureRainfall(0.0F, 2.0F);
 								biome.biomeColors.setGrass(0xffffff);
 								biome.biomeColors.setSky(4212300);
 								biome.biomeColors.setFog(6188664);
@@ -146,7 +197,6 @@ public enum GOTClimateType {
 							case COLD_AZ:
 							case NORMAL:
 							case NORMAL_AZ:
-								biome.setTemperatureRainfall(0.28F, 2.0F);
 								biome.biomeColors.setGrass(0xd09f4d);
 								biome.biomeColors.setSky(11653858);
 								biome.biomeColors.resetFog();
@@ -154,15 +204,7 @@ public enum GOTClimateType {
 								biome.biomeColors.setFoggy(true);
 								break;
 							case SUMMER:
-								biome.setTemperatureRainfall(0.8F, 0.8F);
-								biome.biomeColors.resetGrass();
-								biome.biomeColors.resetSky();
-								biome.biomeColors.resetFog();
-								biome.biomeColors.resetWater();
-								biome.biomeColors.setFoggy(false);
-								break;
 							case SUMMER_AZ:
-								biome.setTemperatureRainfall(0.28F, 0.8F);
 								biome.biomeColors.resetGrass();
 								biome.biomeColors.resetSky();
 								biome.biomeColors.resetFog();
@@ -170,7 +212,6 @@ public enum GOTClimateType {
 								biome.biomeColors.setFoggy(false);
 								break;
 							case WINTER:
-								biome.setTemperatureRainfall(0.0F, 2.0F);
 								biome.biomeColors.setGrass(0xffffff);
 								biome.biomeColors.setSky(4212300);
 								biome.biomeColors.setFog(6188664);
